# hnefatafl-rs-ai

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  REAME.md  hnefatafl-ai-basic-00-attacker.service  hnefatafl-ai-basic-01-defender.service
debian/: hnefatafl-ai-basic-00-attacker.service  hnefatafl-ai-basic-01-defender.service  hnefatafl-ai-basic-attacker.service  hnefatafl-ai-basic-defender.service
src/: main.rs
