[package]
name = "hnefatafl-rs-ai"
version = "0.1.0"
edition = "2024"
authors = ["David Campbell <dcampbell24@gmail.com>"]
rust-version =  "1.85"
description = "Copenhagen AI."
readme = "README.md"
homepage = "https://hnefatafl.org"
repository = "https://github.com/dcampbell24/hnefatafl-copenhagen-rs-ai"
license = "MIT OR Apache-2.0"
keywords = ["ai", "board-game", "copenhagan", "hnefatafl", "tafl"]
categories = ["game-engines", "games"]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version ="4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
hnefatafl = "0.0.1"
hnefatafl-copenhagen = "0.8"
hnefatafl-egui = { version = "0.1", git = "https://github.com/dcampbell24/hnefatafl-egui/" }

[package.metadata.deb]
copyright = "2025 David Lawrence Campbell"
maintainer = "David Campbell <dcampbell24@gmail.com>"
extended-description = "A basic AI."
assets = [
    ["debian/hnefatafl-ai-basic-00-attacker.service", "lib/systemd/system/", "644"],
    ["debian/hnefatafl-ai-basic-01-defender.service", "lib/systemd/system/", "644"],
    ["target/release/hnefatafl-rs-ai", "usr/games/", "755"],
]
section = "games"
