[package]
name = "hnefatafl-rs-ai"
version = "0.1.0"
edition = "2024"
authors = ["David Campbell <dcampbell24@gmail.com>"]
rust-version =  "1.88"
description = "Copenhagen AI."
readme = "README.md"
homepage = "https://hnefatafl.org"
repository = "https://github.com/dcampbell24/hnefatafl-copenhagen-rs-ai"
license = "MIT OR Apache-2.0"
keywords = ["ai", "board-game", "copenhagan", "hnefatafl", "tafl"]
categories = ["game-engines", "games"]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version ="4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
hnefatafl = { git = "https://github.com/bunburya/hnefatafl-rs.git", rev = "76253a6e96be49f4eb87bfca27710b2fde7675e5" }
hnefatafl-copenhagen = "4"
hnefatafl-egui = { version = "0.1", git = "https://github.com/dcampbell24/hnefatafl-egui/", branch = "make-ai-better" }

[package.metadata.deb]
copyright = "2025 David Lawrence Campbell"
maintainer = "David Campbell <dcampbell24@gmail.com>"
extended-description = "A basic AI."
assets = [
    ["debian/hnefatafl-ai-basic-00-attacker.service", "lib/systemd/system/", "644"],
    ["debian/hnefatafl-ai-basic-01-defender.service", "lib/systemd/system/", "644"],
    ["target/release/hnefatafl-rs-ai", "usr/games/", "755"],
]
section = "games"
